fixed navar resizing issue (li items too close)

--- a/Navigation Menu/Example-1/styles/main.scss
+++ b/Navigation Menu/Example-1/styles/main.scss
@@ -7,22 +7,24 @@
     box-sizing: border-box;
 }
 
+
+
+/* --------------------------Navigation menu-------------------------------*/
+
 nav {
     @include flexAroundCenter;
     min-height: 8vh;
     background: #1F4068;
     font-family: 'Poppins', sans-serif;
     color: #A9DEF9;
+    li{
+        padding: 0px 20px;
+    }
 }
 
 .logo {
-    @include flexAroundCenter;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    font-size: 22px;
-    width: 20%;
+    cursor: pointer;
+    padding: 10px 0;
 }
 
 .nav-links {
@@ -32,7 +34,7 @@ nav {
     a {
         text-decoration: none;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 16px;
         letter-spacing: 2px;
         color: white;
     }
@@ -53,6 +55,14 @@ nav {
         transition: all 0.5s ease;
     }
 }
+
+.btn-resume {
+    border: none;
+    padding: 9px 20px;
+
+}
+
+
 
 @media screen and (max-width: 768px) {
     body{
@@ -82,6 +92,16 @@ nav {
     }
 }
 
+.btn-resume {
+    background: #1F4068;
+    padding: 6px 10px;
+    border-radius: 8px;
+    border-color: #70ee9c;
+    border-width: medium;
+    border-style: solid;
+
+}
+
 
 .nav-menu-active {
     transform: translateX(0%);
@@ -108,3 +128,7 @@ nav {
 .nav-menu-toggle .line-3{
     transform: rotate(45deg) translate(-6px,-7px);
 }
+
+
+
+/* --------------------------Landing section--------------------------------*/
